--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -59,9 +59,11 @@
 					</h4>
 				</div>
 				<div id="collapse4" class="panel-collapse collapse">
-					<div class="panel-body">Questions 01 - 10</br>
+					<div class="panel-body">1.2016_agri_mcq_1-10.mp3</br>
 						<audio controls>
-							<source src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/1.2016_agri_mcq_1-10.mp3" type="audio/mp3">
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/1.2016_agri_mcq_1-10.mp3"
+								type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
 						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
@@ -69,6 +71,134 @@
 							<img src="./images/icons8-download-32.png">
 						</a>
 					</div>
+
+
+					<div class="panel-body">10.2016%20agri%20essay%206.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/10.2016%20agri%20essay%206.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">2.2016%20agri%20mcq%2011-20.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/2.2016%20agri%20mcq%2011-20.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">3.2016%20agri%20mcq%2021-30.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/3.2016%20agri%20mcq%2021-30.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">4.2016%20agri%20mcq%2031-40.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/4.2016%20agri%20mcq%2031-40.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">5.2016%20agri%20essay%201.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/5.2016%20agri%20essay%201.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">6.2016%20agri%20essay%202.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/6.2016%20agri%20essay%202.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">7.2016%20agri%20essay%203.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/7.2016%20agri%20essay%203.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">8.2016%20agri%20essay%204.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/8.2016%20agri%20essay%204.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
+					<div class="panel-body">9.2016%20agri%20essay%205.mp3</br>
+						<audio controls>
+							<source
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/9.2016%20agri%20essay%205.mp3"
+								type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+
+
 
 				</div>
 
